--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
 .DS_Store
 /.idea/
+/.allure/
 /src/main/resources/
+/target/test-classes/
+/target/surefire-reports/
+/target/maven-status/
+/target/generated-test-sources/
+/target/generated-sources/
+/target/classes/
+/target/maven-archiver/
+/target/jacoco.exec
+/target/Sprint_8-1.0-SNAPSHOT.jar
